fix nav position, z-index, remove hierarchy for all except pages

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -497,10 +497,9 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  position: relative;
   white-space: nowrap;
   width: 100%;
-  z-index: 10;
+  z-index: 100;
 }
 
 .nav-item {
